fixed media-box-card spacing

--- a/src/scss/components/_card.scss
+++ b/src/scss/components/_card.scss
@@ -36,11 +36,12 @@
     padding: 24px 0 0 0;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
   }
 
   &--action {
     cursor: pointer;
+    position: relative;
+    padding-bottom: calc(44px + 16px);
 
     &:hover {
       transform: translate(0, -5px);
