--- a/src/scss/components/_media_box.scss
+++ b/src/scss/components/_media_box.scss
@@ -34,6 +34,10 @@
       font-size: 12px;
       width: 100%;
       padding: 14px 0;
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      margin-bottom: 0;
     }
   }
 
